[gd_scene load_steps=28 format=3 uid="uid://ce61kpweab77u"]

[ext_resource type="Script" uid="uid://dqervw2ux7u7" path="res://Scripts/Player/player_character.gd" id="1_nsg2u"]
[ext_resource type="Texture2D" uid="uid://c28n25rgvn2x4" path="res://Assets/PC Pictures/stick1.png" id="2_g7f67"]
[ext_resource type="Texture2D" uid="uid://b3pw83omr71ww" path="res://Assets/PC Pictures/dyspraxia_body.png" id="3_3fqcf"]
[ext_resource type="Texture2D" uid="uid://s63teny2sy7b" path="res://Assets/PC Pictures/celestia_body.png" id="4_ctyfi"]
[ext_resource type="Texture2D" uid="uid://cywrtb7sp4ygn" path="res://Assets/PC Pictures/d_upper_right_arm.png" id="5_fx75k"]
[ext_resource type="Texture2D" uid="uid://brvbdkmwo8hjn" path="res://Assets/PC Pictures/celestia_arm1.png" id="6_vglid"]
[ext_resource type="Texture2D" uid="uid://dk7bc7k0dy2tb" path="res://Assets/PC Pictures/pin.png" id="7_22pbi"]
[ext_resource type="Texture2D" uid="uid://dpk7cidvthrjm" path="res://Assets/PC Pictures/right_hand.png" id="8_8vasi"]
[ext_resource type="Texture2D" uid="uid://hqt4qx3w0g36" path="res://Assets/PC Pictures/celestia_hand1.png" id="9_r2alx"]
[ext_resource type="Texture2D" uid="uid://cn2ako2466gvt" path="res://Assets/PC Pictures/d_lower_right_arm.png" id="10_20w5q"]
[ext_resource type="Texture2D" uid="uid://bujjttvo63os8" path="res://Assets/PC Pictures/celestia_arm3.png" id="11_w1j6p"]
[ext_resource type="Texture2D" uid="uid://v1355rel58ny" path="res://Assets/PC Pictures/d_upper_left_arm.png" id="12_dphqs"]
[ext_resource type="Texture2D" uid="uid://dt2fbfh76bvm3" path="res://Assets/PC Pictures/celestia_arm2.png" id="13_5u17d"]
[ext_resource type="Script" uid="uid://c764c8cq48hb7" path="res://Scripts/Player/sword.gd" id="14_dwlvg"]
[ext_resource type="Texture2D" uid="uid://bwo7xsph7pbfg" path="res://Assets/PC Pictures/stick2.png" id="15_yep8f"]
[ext_resource type="Script" uid="uid://b2vkyghlp7s0m" path="res://Scripts/Player/sword_stick.gd" id="16_sk2lc"]
[ext_resource type="Script" uid="uid://dscgvmi7owpsf" path="res://Scripts/Player/blade.gd" id="17_rp2ky"]
[ext_resource type="Texture2D" uid="uid://dwh4exra4pehj" path="res://Assets/PC Pictures/sword.png" id="18_pvcki"]
[ext_resource type="Texture2D" uid="uid://bst24gxd110ah" path="res://Assets/PC Pictures/left_hand.png" id="19_4a4vo"]
[ext_resource type="Texture2D" uid="uid://cgjvnnfmgelwy" path="res://Assets/PC Pictures/celestia_hand2.png" id="20_b5q8l"]
[ext_resource type="Texture2D" uid="uid://ccntot51tqaet" path="res://Assets/PC Pictures/dyspraxia_upper_right_arm.png" id="21_3and8"]
[ext_resource type="Texture2D" uid="uid://dwfprwp5v0y2t" path="res://Assets/PC Pictures/celestia_arm4.png" id="22_mmqu6"]
[ext_resource type="AudioStream" uid="uid://0g5imjkhoc1c" path="res://Assets/Sounds/dyspraxia_hurt_1.mp3" id="23_t2lfa"]
[ext_resource type="AudioStream" uid="uid://dspts23ww3qvr" path="res://Assets/Sounds/dyspraxia_hurt_2.mp3" id="24_r6o2e"]
[ext_resource type="AudioStream" uid="uid://bsx2qxv7pmfj" path="res://Assets/Sounds/dyspraxia_hurt_3.mp3" id="25_aqcs2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1rcr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gctc5"]
radius = 7.07107

[node name="PlayerCharacter" type="CharacterBody2D"]
collision_mask = 49
script = ExtResource("1_nsg2u")

[node name="Model" type="Node2D" parent="."]

[node name="BodyStick" type="Sprite2D" parent="Model"]
position = Vector2(0, 200)
rotation = 1.5708
scale = Vector2(0.12, 0.12)
texture = ExtResource("2_g7f67")

[node name="DyspraxiaBody" type="Sprite2D" parent="Model"]
position = Vector2(5, -25)
rotation = -0.0349066
scale = Vector2(0.11791, 0.11791)
texture = ExtResource("3_3fqcf")

[node name="CelestiaBody" type="Sprite2D" parent="Model"]
visible = false
position = Vector2(-2.8215, -44.7303)
rotation = -0.0174533
scale = Vector2(0.371597, 0.371597)
texture = ExtResource("4_ctyfi")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-112, 96, -108, 97, -101, 97, -91, 95, -83, 91, -74, 85, -65, 75, -60, 67, -55, 56, -53, 48, -53, 35, -52, 24, -51, 6, -51, -11, -50, -24, -49, -37, -49, -52, -48, -62, -44, -74, -35, -91, -21, -104, -25, -114, -27, -132, -27, -143, -11, -147, 4, -148, 27, -144, 27, -128, 24, -114, 21, -103, 31, -97, 40, -89, 47, -76, 50, -63, 52, -33, 53, 9, 55, 53, 61, 71, 68, 81, 80, 91, 97, 99, 110, 102, -111, 98)

[node name="RightArm" type="Node2D" parent="."]
position = Vector2(40, -90)

[node name="UpperRightArm" type="RigidBody2D" parent="RightArm"]
position = Vector2(40, 0)
rotation = -1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm/UpperRightArm"]
scale = Vector2(1, 5)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Dyspraxia" type="Sprite2D" parent="RightArm/UpperRightArm"]
rotation = -0.0261799
scale = Vector2(0.12, 0.12)
texture = ExtResource("5_fx75k")

[node name="Celestia" type="Sprite2D" parent="RightArm/UpperRightArm"]
visible = false
position = Vector2(-0.665281, 1.05632)
rotation = 0.0349066
scale = Vector2(0.374938, 0.345766)
texture = ExtResource("6_vglid")

[node name="PinJoint2D" type="PinJoint2D" parent="RightArm/UpperRightArm"]
position = Vector2(0, -40)
node_a = NodePath("..")
node_b = NodePath("../../..")

[node name="Sprite2D" type="Sprite2D" parent="RightArm/UpperRightArm/PinJoint2D"]
rotation = 3.14159
scale = Vector2(0.12, 0.12)
texture = ExtResource("7_22pbi")

[node name="RightHand" type="RigidBody2D" parent="RightArm"]
position = Vector2(-30, 0)
rotation = 1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm/RightHand"]
scale = Vector2(1, 2)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Dyspraxia" type="Sprite2D" parent="RightArm/RightHand"]
position = Vector2(-3, 0)
rotation = 3.33358
scale = Vector2(0.12, 0.12)
texture = ExtResource("8_8vasi")

[node name="Celestia" type="Sprite2D" parent="RightArm/RightHand"]
visible = false
position = Vector2(0.813687, -0.643886)
rotation = -1.5708
scale = Vector2(0.178577, 0.182431)
texture = ExtResource("9_r2alx")

[node name="PinJoint2D" type="PinJoint2D" parent="RightArm/RightHand"]
position = Vector2(0, -10)
node_a = NodePath("..")
node_b = NodePath("../../LowerRightArm")

[node name="LowerRightArm" type="RigidBody2D" parent="RightArm"]
position = Vector2(30, 0)
rotation = 1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm/LowerRightArm"]
scale = Vector2(1, 6)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Dyspraxia" type="Sprite2D" parent="RightArm/LowerRightArm"]
position = Vector2(2, 0)
scale = Vector2(0.12, 0.12)
texture = ExtResource("10_20w5q")

[node name="Celestia" type="Sprite2D" parent="RightArm/LowerRightArm"]
visible = false
position = Vector2(0.959957, -0.0562379)
rotation = 0.0610865
scale = Vector2(0.371527, 0.343446)
texture = ExtResource("11_w1j6p")

[node name="PinJoint2D" type="PinJoint2D" parent="RightArm/LowerRightArm"]
position = Vector2(0, -50)
node_a = NodePath("..")
node_b = NodePath("../../UpperRightArm")

[node name="Sprite2D" type="Sprite2D" parent="RightArm/LowerRightArm/PinJoint2D"]
scale = Vector2(0.12, 0.12)
texture = ExtResource("7_22pbi")

[node name="Sprite2D2" type="Sprite2D" parent="RightArm/LowerRightArm/PinJoint2D"]
position = Vector2(0.000221252, 100)
scale = Vector2(0.12, 0.12)
texture = ExtResource("7_22pbi")

[node name="LeftArm1" type="Node2D" parent="."]
position = Vector2(-40, -90)
rotation = 3.14159

[node name="UpperLeftArm" type="RigidBody2D" parent="LeftArm1"]
position = Vector2(40, 0)
rotation = -1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm1/UpperLeftArm"]
scale = Vector2(1, 5)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Dyspraxia" type="Sprite2D" parent="LeftArm1/UpperLeftArm"]
position = Vector2(2, 0)
scale = Vector2(0.12, 0.12)
texture = ExtResource("12_dphqs")

[node name="Celestia" type="Sprite2D" parent="LeftArm1/UpperLeftArm"]
visible = false
position = Vector2(-0.213143, -2.06053)
rotation = 0.0698132
scale = Vector2(0.366377, 0.349688)
texture = ExtResource("13_5u17d")

[node name="PinJoint2D" type="PinJoint2D" parent="LeftArm1/UpperLeftArm"]
position = Vector2(0, -40)
node_a = NodePath("..")
node_b = NodePath("../../..")

[node name="Sprite2D" type="Sprite2D" parent="LeftArm1/UpperLeftArm/PinJoint2D"]
scale = Vector2(0.12, 0.12)
texture = ExtResource("7_22pbi")

[node name="Sword" type="Node2D" parent="."]
position = Vector2(0, -90)

[node name="Handle" type="CharacterBody2D" parent="Sword"]
collision_layer = 0
collision_mask = 0
script = ExtResource("14_dwlvg")

[node name="SwordStick" type="Sprite2D" parent="Sword/Handle"]
z_index = -2
rotation = 1.5708
scale = Vector2(0.5, 0.12)
texture = ExtResource("15_yep8f")
offset = Vector2(920, 59)
script = ExtResource("16_sk2lc")

[node name="LeftPin" type="PinJoint2D" parent="Sword/Handle"]
node_a = NodePath("..")
node_b = NodePath("../../../LeftArm2/LeftHand")

[node name="Sprite2D" type="Sprite2D" parent="Sword/Handle/LeftPin"]
rotation = 1.57079
scale = Vector2(0.12, 0.12)
texture = ExtResource("7_22pbi")

[node name="RightPin" type="PinJoint2D" parent="Sword/Handle"]
node_a = NodePath("..")
node_b = NodePath("../../../RightArm/RightHand")

[node name="Sprite2D" type="Sprite2D" parent="Sword/Handle/RightPin"]
rotation = 1.57079
scale = Vector2(0.12, 0.12)
texture = ExtResource("7_22pbi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/Handle"]
shape = SubResource("CircleShape2D_gctc5")

[node name="Blade" type="CharacterBody2D" parent="Sword"]
rotation = 1.5708
collision_layer = 4
collision_mask = 12
script = ExtResource("17_rp2ky")

[node name="SwordStick" type="Sprite2D" parent="Sword/Blade"]
z_index = -2
position = Vector2(202, 3.99924)
rotation = -0.0872665
scale = Vector2(0.5, 0.12)
texture = ExtResource("15_yep8f")
offset = Vector2(920, 60)
script = ExtResource("16_sk2lc")

[node name="Sprite2D" type="Sprite2D" parent="Sword/Blade"]
position = Vector2(110, 0)
rotation = -1.5708
scale = Vector2(0.12, 0.12)
texture = ExtResource("18_pvcki")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Sword/Blade"]
position = Vector2(111, 0)
polygon = PackedVector2Array(-79, 12.9999, -79, -11.0001, 93, -8.00074, 116, 3.99918, 95.0001, 14.9993)

[node name="Sprite2D2" type="Sprite2D" parent="Sword/Blade"]
position = Vector2(202, 2.99927)
rotation = 1.57079
scale = Vector2(0.12, 0.12)
texture = ExtResource("7_22pbi")

[node name="LeftArm2" type="Node2D" parent="."]

[node name="LeftHand" type="RigidBody2D" parent="LeftArm2"]
position = Vector2(-10, -90)
rotation = -1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm2/LeftHand"]
scale = Vector2(1, 2)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Dyspraxia" type="Sprite2D" parent="LeftArm2/LeftHand"]
position = Vector2(-1, 0)
rotation = 3.31613
scale = Vector2(0.12, 0.12)
texture = ExtResource("19_4a4vo")

[node name="Celestia" type="Sprite2D" parent="LeftArm2/LeftHand"]
visible = false
position = Vector2(-0.561836, 0.438184)
rotation = -1.48353
scale = Vector2(0.179011, 0.172461)
texture = ExtResource("20_b5q8l")

[node name="PinJoint2D" type="PinJoint2D" parent="LeftArm2/LeftHand"]
position = Vector2(0, -10)
node_a = NodePath("..")
node_b = NodePath("../../LowerLeftArm")

[node name="Sprite2D" type="Sprite2D" parent="LeftArm2/LeftHand/PinJoint2D"]
position = Vector2(0, 20)
rotation = 3.14159
scale = Vector2(0.12, 0.12)
texture = ExtResource("7_22pbi")

[node name="LowerLeftArm" type="RigidBody2D" parent="LeftArm2"]
position = Vector2(-70, -90)
rotation = -1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm2/LowerLeftArm"]
scale = Vector2(1, 6)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Dyspraxia" type="Sprite2D" parent="LeftArm2/LowerLeftArm"]
position = Vector2(-2, 0)
scale = Vector2(0.12, 0.12)
texture = ExtResource("21_3and8")

[node name="Celestia" type="Sprite2D" parent="LeftArm2/LowerLeftArm"]
visible = false
position = Vector2(0.0176278, -0.288229)
scale = Vector2(0.334958, 0.3516)
texture = ExtResource("22_mmqu6")

[node name="PinJoint2D" type="PinJoint2D" parent="LeftArm2/LowerLeftArm"]
position = Vector2(0, -50)
node_a = NodePath("..")
node_b = NodePath("../../../LeftArm1/UpperLeftArm")

[node name="Sprite2D" type="Sprite2D" parent="LeftArm2/LowerLeftArm/PinJoint2D"]
position = Vector2(-0.000221252, 100)
rotation = 3.14159
scale = Vector2(0.12, 0.12)
texture = ExtResource("7_22pbi")

[node name="Sprite2D2" type="Sprite2D" parent="LeftArm2/LowerLeftArm/PinJoint2D"]
rotation = 3.14159
scale = Vector2(0.12, 0.12)
texture = ExtResource("7_22pbi")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 264

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PackedVector2Array(-112, 96, -108, 97, -101, 97, -91, 95, -83, 91, -74, 85, -65, 75, -60, 67, -55, 56, -53, 48, -53, 35, -52, 24, -51, 6, -51, -11, -50, -24, -49, -37, -49, -52, -48, -62, -44, -74, -35, -91, -21, -104, -25, -114, -27, -132, -27, -143, -11, -147, 4, -148, 27, -144, 27, -128, 24, -114, 21, -103, 31, -97, 40, -89, 47, -76, 50, -63, 52, -33, 53, 9, 55, 53, 61, 71, 68, 81, 80, 91, 97, 99, 110, 102, -111, 98)

[node name="Sounds" type="Node2D" parent="."]

[node name="CelestiaHurt" type="Node2D" parent="Sounds"]

[node name="DyspraxiaHurt" type="Node2D" parent="Sounds"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sounds/DyspraxiaHurt"]
stream = ExtResource("23_t2lfa")
volume_db = 5.0
pitch_scale = 1.1

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Sounds/DyspraxiaHurt"]
stream = ExtResource("24_r6o2e")
volume_db = 5.0
pitch_scale = 1.1

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Sounds/DyspraxiaHurt"]
stream = ExtResource("25_aqcs2")
volume_db = 5.0
pitch_scale = 1.1

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
